--- a/Ceriyo.Server.WPF/Views/ApplicationRootView/ApplicationRoot.xaml
+++ b/Ceriyo.Server.WPF/Views/ApplicationRootView/ApplicationRoot.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Ceriyo.Server.WPF.Views.ApplicationRootView.ApplicationRoot"
+﻿<controls:MetroWindow x:Class="Ceriyo.Server.WPF.Views.ApplicationRootView.ApplicationRoot"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,6 +15,7 @@
         ResizeMode="NoResize"
         Height="430" 
         Width="600"
+        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
         <TabControl>
@@ -42,4 +43,5 @@
             </i:EventTrigger>
         </i:Interaction.Triggers>
     </Grid>
-</Window>
+</controls:MetroWindow>
+
