--- a/Ceriyo.Toolset.WPF/Views/PlaceableEditorView/PlaceableEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/PlaceableEditorView/PlaceableEditor.xaml
@@ -6,11 +6,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
 
              mc:Ignorable="d"
              d:DesignHeight="600"
-             d:DesignWidth="600"
-             Background="LightGray">
+             d:DesignWidth="600">
 
     <Grid>
 
@@ -38,7 +38,7 @@
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="2"
-            Margin="4,4,4,4">
+            Margin="2,2,2,2">
             Placeables:
         </Label>
 
@@ -51,13 +51,15 @@
             DisplayMemberPath="Name"
             SelectionMode="Single"
             ItemsSource="{Binding Placeables}"
-            SelectedItem="{Binding SelectedPlaceable}">
+            SelectedItem="{Binding SelectedPlaceable}"
+            BorderThickness="1"
+            BorderBrush="{DynamicResource AccentColorBrush}">
         </ListBox>
 
         <Button
             Grid.Row="4"
             Grid.Column="0"
-            Margin="5,5,5,5"
+            Margin="2,2,2,2"
             Command="{Binding NewCommand}">
             New
         </Button>
@@ -65,7 +67,7 @@
         <Button
             Grid.Row="4"
             Grid.Column="1"
-            Margin="5,5,5,5"
+            Margin="2,2,2,2"
             Command="{Binding DeleteCommand}">
             Delete
         </Button>
@@ -73,12 +75,16 @@
         <TabControl
             Grid.Row="0"
             Grid.Column="3"
-            Grid.RowSpan="5">
-            <TabItem Header="Appearance">
+            Grid.RowSpan="5"
+            BorderThickness="1"
+            BorderBrush="{DynamicResource AccentColorBrush}">
+            <TabItem Header="Appearance"
+                     controls:ControlsHelper.HeaderFontSize="14">
                 
             </TabItem>
-            
-            <TabItem Header="Scripts">
+
+            <TabItem Header="Scripts"
+                     controls:ControlsHelper.HeaderFontSize="14">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="128"></ColumnDefinition>
@@ -100,14 +106,14 @@
                     <Label
                         Grid.Row="0"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Closed:
                     </Label>
 
                     <ComboBox
                         Grid.Row="0"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnClosed}">
@@ -116,14 +122,14 @@
                     <Label
                         Grid.Row="1"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Opened:
                     </Label>
 
                     <ComboBox
                         Grid.Row="1"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnOpened}">
@@ -132,14 +138,14 @@
                     <Label
                         Grid.Row="2"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Damaged:
                     </Label>
 
                     <ComboBox
                         Grid.Row="2"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnDamaged}">
@@ -148,14 +154,14 @@
                     <Label
                         Grid.Row="3"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Death:
                     </Label>
 
                     <ComboBox
                         Grid.Row="3"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnDeath}">
@@ -164,14 +170,14 @@
                     <Label
                         Grid.Row="4"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Heartbeat:
                     </Label>
 
                     <ComboBox
                         Grid.Row="4"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnHeartbeat}">
@@ -180,14 +186,14 @@
                     <Label
                         Grid.Row="5"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Disturbed:
                     </Label>
 
                     <ComboBox
                         Grid.Row="5"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnDisturbed}">
@@ -196,14 +202,14 @@
                     <Label
                         Grid.Row="6"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Locked:
                     </Label>
 
                     <ComboBox
                         Grid.Row="6"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnLocked}">
@@ -212,14 +218,14 @@
                     <Label
                         Grid.Row="7"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Unlocked:
                     </Label>
 
                     <ComboBox
                         Grid.Row="7"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnUnlocked}">
@@ -228,14 +234,14 @@
                     <Label
                         Grid.Row="8"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Attacked:
                     </Label>
 
                     <ComboBox
                         Grid.Row="8"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnAttacked}">
@@ -244,14 +250,14 @@
                     <Label
                         Grid.Row="9"
                         Grid.Column="0"
-                        Margin="4,4,4,4">
+                        Margin="2,2,2,2">
                         On Used:
                     </Label>
 
                     <ComboBox
                         Grid.Row="9"
                         Grid.Column="1"
-                        Margin="4,4,4,4"
+                        Margin="2,2,2,2"
                         IsEnabled="{Binding IsPlaceableSelected}"
                         ItemsSource="{Binding Scripts}"
                         SelectedItem="{Binding SelectedPlaceable.OnUsed}">
@@ -260,7 +266,8 @@
                 </Grid>
             </TabItem>
 
-            <TabItem Header="Variables">
+            <TabItem Header="Variables"
+                     controls:ControlsHelper.HeaderFontSize="14">
                 <Grid>
 
                     <Grid.RowDefinitions>
@@ -307,14 +314,16 @@
                 </Grid>
             </TabItem>
 
-            <TabItem Header="Description">
+            <TabItem Header="Description"
+                     controls:ControlsHelper.HeaderFontSize="14">
                 <TextBox 
                 		AcceptsReturn="True"
                 		TextWrapping="Wrap"
                         IsEnabled="{Binding IsPlaceableSelected}"
                 		Text="{Binding SelectedPlaceable.Description}" />
             </TabItem>
-            <TabItem Header="Comments">
+            <TabItem Header="Comments"
+                     controls:ControlsHelper.HeaderFontSize="14">
                 <TextBox 
                 		AcceptsReturn="True"
                 		TextWrapping="Wrap"
@@ -358,7 +367,7 @@
             <TextBox
                 Grid.Column="0"
                 Grid.Row="2"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 Text="{Binding SelectedPlaceable.Name}"
                 IsEnabled="{Binding IsPlaceableSelected}">
             </TextBox>
@@ -372,7 +381,7 @@
             <TextBox
                 Grid.Column="0"
                 Grid.Row="4"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 Text="{Binding SelectedPlaceable.Tag}"
                 IsEnabled="{Binding IsPlaceableSelected}">
             </TextBox>
@@ -386,7 +395,7 @@
             <TextBox
                 Grid.Column="0"
                 Grid.Row="6"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 Text="{Binding SelectedPlaceable.Resref}"
                 IsEnabled="{Binding IsPlaceableSelected}">
             </TextBox>
@@ -394,7 +403,7 @@
             <CheckBox
                 Grid.Column="0"
                 Grid.Row="8"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 IsChecked="{Binding SelectedPlaceable.IsStatic}"
                 IsEnabled="{Binding IsPlaceableSelected}">
                 Static
@@ -403,7 +412,7 @@
             <CheckBox
                 Grid.Column="0"
                 Grid.Row="9"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 IsChecked="{Binding SelectedPlaceable.IsPlot}"
                 IsEnabled="{Binding IsPlaceableSelected}">
                 Plot
@@ -412,7 +421,7 @@
             <CheckBox
                 Grid.Column="0"
                 Grid.Row="10"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 IsChecked="{Binding SelectedPlaceable.IsUseable}"
                 IsEnabled="{Binding IsPlaceableSelected}">
                 Useable
@@ -421,7 +430,7 @@
             <CheckBox
                 Grid.Column="0"
                 Grid.Row="11"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 IsChecked="{Binding SelectedPlaceable.IsLocked}"
                 IsEnabled="{Binding IsPlaceableSelected}">
                 Locked
@@ -430,7 +439,7 @@
             <CheckBox
                 Grid.Column="0"
                 Grid.Row="12"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 IsChecked="{Binding SelectedPlaceable.IsKeyRequired}"
                 IsEnabled="{Binding IsPlaceableSelected}">
                 Key Required
@@ -439,7 +448,7 @@
             <CheckBox
                 Grid.Column="0"
                 Grid.Row="13"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 IsChecked="{Binding SelectedPlaceable.AutoRemoveKey}"
                 IsEnabled="{Binding IsPlaceableSelected}">
                 Auto Remove Key
@@ -454,7 +463,7 @@
             <TextBox
                 Grid.Column="0"
                 Grid.Row="16"
-                Margin="4,4,4,4"
+                Margin="2,2,2,2"
                 Text="{Binding SelectedPlaceable.KeyTag}">
             </TextBox>
             
